# linux

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.md  HISTORY.rst  LICENSE  Makefile  README.md  makefile  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
config/: changelog.json  makefile  mkdocs.yml
config/.mylinux/: mylinux.conf
config/plugins.d/: example.conf
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/specs/: DHCPDISCOVER.pcapng
docs/template/: fadein.css  theme.css
mylinux/: __init__.py  cli.py  mylinux.py
mylinux/cli/: bootstrap.py  main.py
mylinux/cli/controllers/: __init__.py  base.py  gui.py  install.py  purge.py  remove.py  report.py  server.py  test.py
mylinux/cli/plugins/: example.py
mylinux/core/: dhcp.py  exc.py  pxe.py  tftp.py  utils.py
mylinux/core/net/: ICMP.py  PXE.py  WOL.py  dhcp.py  pxe.py  wol.py
mylinux/core/pxe/: dhcp.py  wol.py
mylinux/gui/: __init__.py  main.py  main.ui
mylinux/gui/main/: __init__.py
mylinux/gui/static/: socketio.js
mylinux/lib/: dhcp.py  exc.py  tftp.py
mylinux/lib/pxe/: dhcp.py
mylinux/server/: __init__.py
mylinux/server/static/: react.js
mylinux/server/templates/: index.html
mylinux/utils/: test.py
test/: test_mylinux.py  utils.py
test/e2e/: test_mylinux.py
test/spec/: test_core_net_dhcp.py  test_core_net_pxe.py  test_mylinux.py
tests/: test_mylinux.py
